[project]
name = "docs"
version = "0.1.0"
description = "OCI Utils Documentation"
authors = [
    {name = "David Ankin",email = "dankin@ambit.inc"}
]
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
mkdocs = "^1.6.1"
mkdocs-terminal = "^4.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
